--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,4 @@ before_script:
   - chmod ugo+x build/travis/travis.sh
   - ./build/travis/travis.sh
   - phpenv rehash
-  - sudo apt-cache search php
+  - sudo apt-cache search hhvm
