--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ services:
 install:
   # - travis_retry composer self-update && composer update
   # Install PHPCS to validate code standards
-  - composer require squizlabs/php_codesniffer 1.5.6
+  - composer require squizlabs/php_codesniffer 2.*
   # Install Cache_Lite for testing
   - composer require pear/cache_lite 1.7.16
 
@@ -30,4 +30,4 @@ before_script:
   - chmod ugo+x build/travis/travis.sh
   - ./build/travis/travis.sh
   - phpenv rehash
-  - sudo apt-cache search hhvm
+  #- sudo apt-cache search php
