get the arduino package info
- I know it's not PHP but I need the info

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,4 @@ before_script:
   - ./build/travis/travis.sh
   - phpenv rehash
   #- sudo apt-cache search php
+  - apt-cache showpkg arduino arduino-core
