--- a/.travis.yml
+++ b/.travis.yml
@@ -2,24 +2,24 @@ language: php
 
 php:
   - 7.0
-  - hhvm
+  #- hhvm
 
 matrix:
-  exclude:
-    - php: hhvm
-      env: DB=pgsql  # PDO driver for PostgreSQL currently unsupported by HHVM
+  #exclude:
+    #- php: hhvm
+      #env: DB=pgsql  # PDO driver for PostgreSQL currently unsupported by HHVM
   allow_failures:
     - php: 7.0
-    - php: hhvm
+    #- php: hhvm
 
 services:
-  - memcached
-  - redis-server
+  #- memcached
+  #- redis-server
 
 install:
   # - travis_retry composer self-update && composer update
   # Install PHPCS to validate code standards
-  - composer require squizlabs/php_codesniffer 2.*
+  #- composer require squizlabs/php_codesniffer 2.*
   # Install Cache_Lite for testing
   #- composer require pear/cache_lite 1.7.16
 
@@ -27,8 +27,9 @@ before_script:
   # Set up Apache
   # - ./build/travis/php-apache.sh
   # Enable additional PHP extensions
-  - chmod ugo+x build/travis/travis.sh
-  - ./build/travis/travis.sh
-  - phpenv rehash
+  #- chmod ugo+x build/travis/travis.sh
+  #- ./build/travis/travis.sh
+  #- phpenv rehash
+  - apt-get update
   #- sudo apt-cache search php
   - apt-cache showpkg arduino arduino-core
